--- a/src/index.css
+++ b/src/index.css
@@ -21,24 +21,48 @@ code {
   margin: 0;
 }
 
-.custom-font-1 {
-  font-size: 1.2rem;
+:root {
+  /*--> default colors are for dark theme */
+  --text-color-1: black;
+  --bg-color-1: white;
+  --bg-blue: blue;
+  --bg-color-2: gray;
 }
 
 .light-theme {
   --text-color-1: gray;
   --bg-color-1: black;
+  --bg-blue: blue;
+  --bg-color-2: gray;
 }
 
-.dark-theme {
+/* .dark-theme {
   --text-color-1: black;
   --bg-color-1: white;
-}
+} */
+
+/* background colors */
 
 .bg-1 {
   background-color: var(--bg-color-1);
 }
 
+.custom-bg-blue {
+  background-color: var(--bg-blue);
+}
+
+.custom-bg-gray {
+  background-color: var(--bg-color-2);
+}
+
+/* text colors */
+
 .text-color-1 {
   color: var(--text-color-1);
+}
+
+/* font size */
+
+.custom-font-1 {
+  font-size: 1.2rem;
 }
